--- a/style.css
+++ b/style.css
@@ -62,4 +62,15 @@ footer {
   border: 1px dotted lightgrey;
 }
 
+@media only screen and (max-width: 1400px) {
+  .responsive {
+    width: 49.9%;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .responsive {
+    width: 100%;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
