--- a/style.scss
+++ b/style.scss
@@ -65,3 +65,14 @@ footer {
     border: 1px dotted lightgrey;
 }
 
+@media only screen and (max-width: 1400px) {
+    .responsive {
+        width: 49.9%;
+    }
+} 
+
+@media only screen and (max-width: 600px) {
+    .responsive {
+        width: 100%;
+    }
+}
